--- a/lab2/src/novas.rc
+++ b/lab2/src/novas.rc
@@ -201,7 +201,7 @@ StickSet-TextColor = black
 [FSM_Dlg-Print]
 Orientation = Landscape
 [FileBrowser]
-nWaveOpenFsdbDirHistory = "\"/home/raid7_2/userb09/b09027/Digital-Circuit/lab2/src/lab2.fsdb\"" "\"/home/raid7_2/userb09/b09027/Digital-Circuit/lab2/src/lab2_Prep.fsdb\""
+nWaveOpenFsdbDirHistory = "\"/home/raid7_2/userb09/b09027/Digital-Circuit/lab2/src/lab2.fsdb\""
 [Form]
 version = Verdi_P-2019.06
 [General]
@@ -327,9 +327,10 @@ PaperSize = A4 - 210x297 (mm)
 ColorPrint = FALSE
 [QtDialog]
 QwUserAskDlg = 609,340,324,134
+QwWarnMsgDlg = 650,375,600,250
+openFileDlg = 659,290,602,483
+qWaveSignalDialog = 560,292,800,479
 QwQuestionMsgDlg = 596,328,324,110
-qWaveSignalDialog = 371,166,800,479
-openFileDlg = 470,164,602,483
 [Session Cache]
 1 = string (session file name)
 2 = string (session file name)
@@ -543,8 +544,8 @@ waveform_vertical_scroll_bar = TRUE
 scope_to_save_with_macro
 open_file_dir
 open_rc_file_dir
-getSignalForm = 371 166 800 479 204 381 350 89
-viewPort = -158 168 1536 801 200 133
+getSignalForm = 560 292 800 479 164 381 390 89
+viewPort = 0 0 1920 1061 204 387
 signalSpacing = 5
 digitalSignalHeight = 15
 analogSignalHeight = 98
@@ -815,8 +816,7 @@ curveWindow_Drag&Drop_Mode = TRUE
 hspiceIncOpenMode = TRUE
 pcSelectMode = TRUE
 hierarchyDelimiter = /
-RecentFile1 = "\"/home/raid7_2/userb09/b09027/Digital-Circuit/lab2/src/lab2_Prep.fsdb\""
-RecentFile2 = "\"/home/raid7_2/userb09/b09027/Digital-Circuit/lab2/src/lab2.fsdb\""
+RecentFile1 = "\"/home/raid7_2/userb09/b09027/Digital-Circuit/lab2/src/lab2.fsdb\""
 open_file_time_range = FALSE
 value_window_aligment = Right
 signal_window_alignment = Auto
@@ -853,6 +853,7 @@ displayVerticalRuler = FALSE
 displayHorizontalRuler = FALSE
 displayVerticalGrid = FALSE
 displayHorizontalGrid = FALSE
+RecentFile2 = "\"/home/raid7_2/userb09/b09027/Digital-Circuit/lab2/src/lab2.fsdb\""
 [cov_hier_name_column]
 justify = TRUE
 [coverageColors]
