--- a/final/DE2_115_CAMERA/DE2_115_CAMERA.qsf
+++ b/final/DE2_115_CAMERA/DE2_115_CAMERA.qsf
@@ -1002,6 +1002,13 @@ set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name LL_ROOT_REGION ON -section_id "Root Region"
 set_global_assignment -name LL_MEMBER_STATE LOCKED -section_id "Root Region"
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
+set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name SYSTEMVERILOG_FILE v/Blob.sv
+set_global_assignment -name SYSTEMVERILOG_FILE v/Grayscale.sv
+set_global_assignment -name SDC_FILE DE2_115_D5M_VGA.sdc
 set_global_assignment -name VERILOG_FILE Sdram_Control/command.v
 set_global_assignment -name VERILOG_FILE Sdram_Control/control_interface.v
 set_global_assignment -name VERILOG_FILE Sdram_Control/sdr_data_path.v
