--- a/final/DE2_115_CAMERA/DE2_115_CAMERA.qsf
+++ b/final/DE2_115_CAMERA/DE2_115_CAMERA.qsf
@@ -1006,6 +1006,8 @@ set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name NUM_PARALLEL_PROCESSORS 1
+set_global_assignment -name SYSTEMVERILOG_FILE v/Blob_pipeline.sv
 set_global_assignment -name SYSTEMVERILOG_FILE v/Blob.sv
 set_global_assignment -name SYSTEMVERILOG_FILE v/Grayscale.sv
 set_global_assignment -name SDC_FILE DE2_115_D5M_VGA.sdc
@@ -1035,5 +1037,4 @@ set_global_assignment -name SOURCE_FILE VGA_Param.h
 set_global_assignment -name VERILOG_FILE v/Line_Buffer1.v
 set_global_assignment -name QIP_FILE v/Line_Buffer1.qip
 set_global_assignment -name VERILOG_FILE DE2_115_CAMERA.v
-set_global_assignment -name NUM_PARALLEL_PROCESSORS 1
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
