update demo & classification

--- a/DE2_115_CAMERA_12270147/DE2_115_CAMERA.qsf
+++ b/DE2_115_CAMERA_12270147/DE2_115_CAMERA.qsf
@@ -1006,8 +1006,8 @@ set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name SYSTEMVERILOG_FILE v/Blob_final.sv
 set_global_assignment -name SYSTEMVERILOG_FILE v/SevenHexDecoder.sv
-set_global_assignment -name SYSTEMVERILOG_FILE v/Blob_pipeline.sv
 set_global_assignment -name SYSTEMVERILOG_FILE v/Grayscale.sv
 set_global_assignment -name SDC_FILE DE2_115_D5M_VGA.sdc
 set_global_assignment -name VERILOG_FILE Sdram_Control/command.v
